fixed a few things on mobile

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -73,6 +73,13 @@
   position: relative;
 }
 
+.list-description {
+  // margin-bottom: 25px;
+  letter-spacing: 1px;
+  color: lightgray;
+  text-align: center;
+
+}
 .profile-edit{
     .current-list {
       .change {
