--- a/app/assets/stylesheets/responsive-iphone5.scss
+++ b/app/assets/stylesheets/responsive-iphone5.scss
@@ -287,9 +287,9 @@ and (max-device-width : 568px) {
       height: 100px !important;
     }
 
-    .category.slick-current {
-      border-bottom: 8px solid black !important;
-    }
+    // .category.slick-current {
+    //   border-bottom: 8px solid darkred !important;
+    // }
 
     .quote-text {
       font-size: 90px !important;
